Bug 408772: Replace nscoord_MAX-unsafe arithmetic with safe call to NSCoordSaturatingSubtract, in nsComboboxControlFrame::GetIntrinsicWidth. r+sr=bzbarsky a=mtschrep